kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudmesh-dev
  labels:
    app.kubernetes.io/part-of: cloudmesh
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
