kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudmesh-demo
  namespace: cloudmesh-dev
  labels:
    app.kubernetes.io/name: cloudmesh-demo
spec:
  selector:
    app.kubernetes.io/name: cloudmesh-demo
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
